k8s/woker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: skillboost/multi-worker
        # no other Object needs access to worker
        # so ports and Service Object for
        # worker section can be ommitted
        #
        # need config for redis app
        # passing ENVIRONMET VARIABLES
