k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  # additional configuration options
  # to specify higher functionality
  # around Ingress Object
  annotations:
    # want to create Ingress Object based
    # on nginx project
    kubernetes.io/ingress.class: 'nginx'
    # rules how Ingress Object copy is going
    # to behave
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
spec:
  # specyfing routing rules
  rules:
   - http:
       paths:
         - path: /?(.*)
           # UPDATE PATH
           pathType: Prefix
           # ADD PATHTYPE
           backend:
             service:
               # UPDATE SERVICE FIELDS
               name: client-cluster-ip-service
               port:
                 number: 3000
         - path: /api/?(.*)
           # UPDATE PATH
           pathType: Prefix
           # ADD PATHTYPE
           backend:
             service:
               # UPDATE SERVICE FIELDS
               name: server-cluster-ip-service
               port:
                  number: 5000
